fix pipeline error